stderr
JudgeMan.java:12: error: incomparable types: boolean and int
        if(intArray[0] + 4 == intArray[1] + 3 == intArray[2] + 2 == intArray[3] + 1 == intArray[4]){
                                              ^
JudgeMan.java:12: error: incomparable types: boolean and int
        if(intArray[0] + 4 == intArray[1] + 3 == intArray[2] + 2 == intArray[3] + 1 == intArray[4]){
                                                                 ^
JudgeMan.java:12: error: incomparable types: boolean and int
        if(intArray[0] + 4 == intArray[1] + 3 == intArray[2] + 2 == intArray[3] + 1 == intArray[4]){
                                                                                    ^
3 errors
